# furnace

./: .eslintignore  .eslintrc.json  .gitignore  .knip.json  .unimportedrc.json  Cargo.toml  README.md  build_contract_release.sh  next.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
public/assets/: Discord.tsx
schema/: furnace.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_fuels.json  response_to_leaderboard.json
schemas/: furnace-schema.json
smart-contracts/: Cargo.toml  build_release.sh
smart-contracts/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
smart-contracts/src/tests/: helpers.rs  test.rs
src/: middleware.ts
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/apps/: page.tsx
src/codegen/: Furnace.client.ts  Furnace.types.ts  index.ts
src/components/: AccountMenu.tsx  Layout.tsx  constants.ts  index.ts
src/constants/: address.ts  api.ts  apps.ts  assets.ts  index.ts  labels.ts  theme.ts
src/hooks/: index.ts  useBroadcastTransaction.ts  useChainContext.tsx  useExecuteBurn.ts  useExecuteContract.ts  useFetchBalances.ts  useFetchChainAssets.ts  useFetchFurnaceData.ts  useFetchHeight.ts  useFetchLeaderboard.ts  useFetchTableData.ts  useSignTransaction.ts  useSigningCosmWasmClient.ts  useSigningCosmWasmClient.tsx  useSimulateTransaction.ts  useTheme.ts
src/lib/: fetchBalances.ts  fetchHeight.ts  index.ts
src/state/: index.ts
src/state/app/: atom.ts  (+3 more)
src/types/: index.ts
src/util/: index.ts
(+121 files in other folders)
