[package]
name = "furnace"
version = "0.2.1"
authors = ["Paul Stelzig <paul@irulast.com>", "Nahem <nahemseguias@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { version = "1.5.5" }
cosmwasm-std = { version = "1.5.5", features = ["stargate"] }
cw-storage-plus = { version = "1.2.0" }
cw2 = { version = "1.1.2" }
schemars = { version = "0.8.21" }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
osmosis-std-derive = { version = "0.15.3" }
prost = { version = "0.11.0", default-features = false, features = [
  "prost-derive",
] }
prost-types = { version = "0.11.1", default-features = false }
semver = { version = "1.0.12" }
cw20 = { version = "1.1.2" }
cw-utils = { version = "1.0.3" }
white-whale-std = { version = "1.1.5" }

[dev-dependencies]
cw-multi-test =  { version = "0.20.1" }
